--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,12 @@
 <body>
 
   <textarea name="textmanin" id="textput" cols="30" rows="10" placeholder="type to speak"></textarea>
-<button id="forceblurt">speak</button>
+  <button id="forceblurt">speak</button>
+
+  <div id="history">
+
+  </div>
+
   <script src="capacitor.js"></script>
   <script src="js/index.js"></script>
 </body>
