--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,16 @@
 </head>
 
 <body>
+
+  <div class="viewpane">
+
+  </div>
+
   <div class="speakcontainer">
     <textarea name="textmanin" id="textput" cols="30" rows="10" placeholder="type to speak"></textarea>
     <button id="forceblurt">speak</button>
   </div>
+
   <div id="history">
 
   </div>
